--- a/distelli-manifest.yml
+++ b/distelli-manifest.yml
@@ -1,4 +1,4 @@
-bmcgehee2/nodejsbuilddeploy:
+<username>/nodejsbuilddeploy:
   # Distelli Manifest example
   # this example assumes the build and deploy servers are:
   # Ubuntu 14.04
