Updated Manifest Username

--- a/distelli-manifest.yml
+++ b/distelli-manifest.yml
@@ -1,4 +1,4 @@
-<username>/nodejsbuilddeploy:
+zchase/Example-Node:
   # Distelli Manifest example
   # this example assumes the build and deploy servers are:
   # Ubuntu 14.04 
