--- a/distelli-manifest.yml
+++ b/distelli-manifest.yml
@@ -13,7 +13,7 @@ zchase/Example-Node:
     - echo "-Installing npm-"
     - sudo apt-get -y install npm
     - echo "--Building--"
-    - sudo npm install
+    - npm install
     - echo "--Testing--"
     - npm test
 
